--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
+    <meta name="robots" content="follow" />
     <meta name="keywords" content="agence design paris, agence design">
     <meta name="description" content="Bonjour, nous sommes une agence de design pour vous faciliter la vie de votre entreprise et améliorer votre attractivité et votre visibilité sur Internet. ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
